--- a/aqua_style.css
+++ b/aqua_style.css
@@ -4,22 +4,62 @@ body {
 
 .header {
     background-color: black;
+    width: 100%;
+    height: 100px;
+    border-bottom: 4px solid;
+    border-color: #32B9CD;
 }
 
-.container {
+.header .container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 80%;
-    border: 1px solid #32B9CD;
     margin-left: 10%;
     margin-right: 10%;
-/*  margin: 0 10% 0 10%; */
+    height: 100%;
 }
 
-h1 {
+.header .container h1 {
     color: #32B9CD;
     margin: 0;
 }
-.navbar {
-    color: rgb(255, 255, 0);
+.header .container .navbar {
+    list-style: none;
+}
+
+.header .container .navbar li {
+    display: inline;
+    padding: 0 15px;
+}
+
+.header .container .navbar li a {
+    color: #ffae00;
+    text-decoration: none;
+}
+
+.header .container .navbar li a:hover {
+    color: #ffce65;
+}
+
+.banner {
+    width: 100%;
+    height: 400px;
+    background-image: url(imagens/bg-jelly-fish-para_outras_pags.png);
+}
+
+.banner .container {
+    width: 80%;
+    height: 100%;
+    margin: 0 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner .container p {
+    margin: 0;
+    color: white;
+    font-size: 32px;
+    width: 10%;
 }
